2002-09-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/sequential-iterator.cc (Sequential_iterator): init list_

	* lily/translator-def.cc (Translator_def): make a GC proof copy
	constructor.

2002-09-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/percent-repeat-iterator.cc (process): quit iter.

	* lily/simultaneous-music-iterator.cc
	(Simultaneous_music_iterator): protection bugfix.
	(get_pending_events): bugfix: don't use s twice.

	* debian/: debian patches by Anthony Fok.
	
	* lily/clef-engraver.cc (create_clef): bugfix for octavate clef
	(thanks Rune!)

	* Documentation/user/tutorial.itely: replace grob by
	object. Explain \once.

	* scm/music-property-description.scm (once): add 'once

2002-09-13  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/simultaneous-music-iterator.cc (skip): call quit()
	when an iterator exits early.

2002-09-13  Juergen Reuter  <reuter@ipd.uka.de>

	* lily/rests.ly: added comment on bogus warnings about missing flags

	* lily/clef.cc, lily/rests.cc: added warning when font character
	lookup fails.

	* lily/rests.cc: workaround: consider missing ledgered rests in
	ancient font.

	* lily/rests.cc: bugfix: cleaned up font lookup code that handles
	special cases of styles 'default' and 'classical'.  This should
	also fix the behaviour of lily/multi-measure-rest.cc, which so far
	did not consider styles 'default' and 'classical'.

2002-09-13  Rune Zedeler  <rune@zedeler.dk>

	* scm/drums.scm: "set" the automatic properties instead of
	"override", (whoops!)
	
2002-09-13  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* ly/a3-init.ly, scripts/ly2dvi.py (ly_paper_to_latexpaper): 
	Add support for A3 paper.

2002-09-13  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/tuplet-bracket.cc (brew_molecule): don't crash on broken
	tuplet brackets.

	* lily/property-iterator.cc (do_quit): add finalization functions
	to undo property settings.

	* lily/parser.yy (property_def): syntax for \once \property ....
